--- a/config/_default/languages.toml
+++ b/config/_default/languages.toml
@@ -4,7 +4,7 @@
 
 # Configure the English version of the site.
 [en]
-  languageCode = "en-us"
+  languageCode = "en-uk"
 
 # Uncomment the lines below to configure your website in a second language.
 #[zh]
