--- a/seb/config/_default/menus.toml
+++ b/seb/config/_default/menus.toml
@@ -9,33 +9,23 @@
   weight = 1
 
 [[main]]
-  name = "Publications"
-  url = "#publications_featured"
+  name = "Research"
+  url = "#projects"
   weight = 2
 
 [[main]]
-  name = "Posts"
-  url = "#posts"
+  name = "Publications"
+  url = "#publications"
   weight = 3
 
 [[main]]
   name = "Projects"
-  url = "#projects"
+  url = 
   weight = 4
-
-[[main]]
-  name = "Tutorials"
-  url = "/tutorial/"
-  weight = 5
-
-[[main]]
-  name = "Contact"
-  url = "#contact"
-  weight = 6
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
-# [[main]]
-#    name = "CV"
-#    url = "files/cv.pdf"
-#    weight = 7
+#[[main]]
+#  name = "CV"
+#  url = "files/cv.pdf"
+#  weight = 5
