--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -18,7 +18,7 @@ description = ""
 sharing_image = ""
 
 # Twitter username (without @). Used when a vistor shares your site on Twitter.
-twitter = ""
+twitter = "@bosch_se"
 
 # Diplay a logo in navigation bar rather than title (optional).
 #   To enable, place an image in `static/img/` and reference its filename below. To disable, set the value to "".
@@ -153,7 +153,7 @@ custom_js  = []
   #   2 = APA
   #   3 = MLA
   #   4 = Stream
-  publication_format = 4
+  publication_format = 0
 
   # Talk list format.
   #   0 = Simple
