--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -9,28 +9,28 @@
   weight = 10
 
 [[main]]
-  name = "Posts"
-  url = "#posts"
-  weight = 20
+  name = "Projects"
+  url = "/project/"
+  weight = 30
 
 [[main]]
-  name = "Projects"
-  url = "#projects"
+  name = "Research"
+  url = "/research/"
   weight = 30
 
 [[main]]
   name = "Publications"
-  url = "#featured"
+  url = "/publication/"
   weight = 40
 
 [[main]]
-  name = "Tutorials"
+  name = "Media"
   url = "/tutorial/"
   weight = 50
 
 [[main]]
   name = "Contact"
-  url = "#contact"
+  url = "/contact/"
   weight = 60
 
 # Link to a PDF of your resume/CV from the menu.
