--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -9,7 +9,7 @@ day_night = false
 
 # Font style.
 #   Choose from `default`, `classic`, or `playfair`.
-font = "playfair"
+font = "seb"
 
 # Description for social sharing and search engines. If undefined, superuser role is used in place.
 description = "Personal website of Dr. Sander Bosch"
