--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -8,30 +8,30 @@
   url = "#about"
   weight = 10
 
-[[main]]
-  name = "Projects"
-  url = "/project/"
-  weight = 30
+#[[main]]
+#  name = "Projects"
+#  url = "/project/"
+#  weight = 20
 
-[[main]]
-  name = "Research"
-  url = "/research/"
-  weight = 30
+#[[main]]
+#  name = "Research"
+#  url = "/research/"
+#  weight = 30
 
 [[main]]
   name = "Publications"
   url = "/publication/"
   weight = 40
 
-[[main]]
-  name = "Media"
-  url = "/tutorial/"
-  weight = 50
+#[[main]]
+#  name = "Media"
+#  url = "/tutorial/"
+#  weight = 50
 
-[[main]]
-  name = "Contact"
-  url = "/contact/"
-  weight = 60
+#[[main]]
+#  name = "Contact"
+#  url = "/contact/"
+#  weight = 60
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
