--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -5,33 +5,28 @@
 
 [[main]]
   name = "Home"
-  url = "#about"
+  url = "about"
   weight = 10
 
 #[[main]]
 #  name = "Projects"
-#  url = "/project/"
+#  url = "#projects"
 #  weight = 20
-
-#[[main]]
-#  name = "Research"
-#  url = "/research/"
-#  weight = 30
 
 [[main]]
   name = "Publications"
   url = "/publication/"
-  weight = 40
+  weight = 30
 
 #[[main]]
 #  name = "Media"
 #  url = "/tutorial/"
-#  weight = 50
+#  weight = 40
 
 #[[main]]
 #  name = "Contact"
 #  url = "/contact/"
-#  weight = 60
+#  weight = 50
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
