--- a/data/themes/seb2.toml
+++ b/data/themes/seb2.toml
@@ -10,10 +10,10 @@ primary_light = "#859ab5"
 primary_dark = "#29384b"
 
 # Menu
-menu_primary = "#FFFFFF" # 500
-menu_text = "#496487"
-menu_text_active = "#859ab5" # A100
-menu_title = "#496487"
+menu_primary = "#496487" # 500
+menu_text = "#edf0f4"
+menu_text_active = "#b9c5d5" # A100
+menu_title = "#edf0f4"
 
 # Home sections
 home_section_odd = "rgb(255, 255, 255)"
