--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -9,7 +9,7 @@ title = "Dr. Sander Bosch"
 
 # The URL of your site.
 # End your URL with a `/` trailing slash, e.g. `https://example.com/`.
-baseurl = "https://sanderbos.ch/"
+baseurl = "https://www.sanderbosch.com/"
 
 # Enter a copyright notice to display in the site footer.
 # To display a copyright symbol, type `&copy;`. For current year, type `{year}`.
