--- a/netlify.toml
+++ b/netlify.toml
@@ -12,3 +12,10 @@
   from = "/*"
   to = "/index.html"
   status = 200
+  
+# Redirect domain aliases to primary domain
+[[redirects]]
+  from = "https://sanderbos.ch/*"
+  to = "https://www.sanderbosch.com/:splat 301!"
+  status = 200
+  force = true
