--- a/netlify.toml
+++ b/netlify.toml
@@ -14,14 +14,8 @@
   status = 200
   
 # Redirect domain aliases to primary domain
-[[redirects]]
-  from = "https://www.sanderbos.ch/"
-  to = "https://www.sanderbosch.com/"
-  status = 301
-  force = true
-
-[[redirects]]
-  from = "https://sanderbos.ch/"
-  to = "https://sanderbosch.com/"
-  status = 301
-  force = true
+#[[redirects]]
+#  from = "https://www.sanderbos.ch/"
+#  to = "https://www.sanderbosch.com/"
+#  status = 301
+#  force = true
