--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -18,7 +18,7 @@ description = "Personal website of Dr. Sander Bosch"
 sharing_image = "sander_bosch_grey.jpg"
 
 # Twitter username (without @). Used when a vistor shares your site on Twitter.
-twitter = "bosch_se"
+twitter = ""
 
 # Diplay a logo in navigation bar rather than title (optional).
 #   To enable, place an image in `static/img/` and reference its filename below. To disable, set the value to "".
@@ -65,7 +65,7 @@ appointment_url = "" #"https://calendly.com"
 # Contact links
 #   Set to `[]` to disable, or comment out unwanted lines with a hash `#`.
 contact_links = [
-  {icon = "twitter", icon_pack = "fab", name = "@bosch_se", link = "https://twitter.com/bosch_se"},
+  {icon = "mastodon", icon_pack = "fab", name = "@bosch_se", link = "https://mas.to/@sebosch"},
   {icon = "linkedin", icon_pack = "fab", name = "Let's link up!", link = "https://linkedin.com/in/sander-erik-bosch"},
   # {icon = "orcid", icon_pack = "ai", name = "View", link = "https://orcid.org/0000-0001-6845-0911"},
   # {icon = "google-scholar", icon_pack = "ai", name = "Google Scholar", link = "https://scholar.google.nl/citations?user=yLpaR48AAAAJ&hl=nl"},
