--- a/netlify.toml
+++ b/netlify.toml
@@ -1,11 +1,26 @@
-[build]
-  publish = ""
-  command = "hugo"
+[build.environment]
+#DART_SASS_VERSION = "1.93.2"
+GO_VERSION="go1.25.3"
+HUGO_VERSION = "0.152.2"
+#NODE_VERSION = "22.20.0"
+#TZ = "Europe/Oslo"
 
-[context.production.environment]
-  HUGO_VERSION = "0.80.0"
-  HUGO_ENV = "production"
-  HUGO_ENABLEGITINFO = "false"
+[build]
+publish = "public"
+command = """\
+  git config core.quotepath false && \
+  hugo --gc --minify --baseURL "${URL}"
+  """
+  
+  
+  #[build]
+#  publish = ""
+#  command = "hugo"
+
+#[context.production.environment]
+#  HUGO_VERSION = "0.80.0"
+#  HUGO_ENV = "production"
+#  HUGO_ENABLEGITINFO = "false"
 
 # COMMENT: This a rule for Single Page Applications
 #[[redirects]]
