--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build.environment]
 #DART_SASS_VERSION = "1.93.2"
-GO_VERSION="go1.25.3"
+GO_VERSION="1.25.3"
 HUGO_VERSION = "0.152.2"
 #NODE_VERSION = "22.20.0"
 #TZ = "Europe/Oslo"
